--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -65,9 +65,10 @@
   "status" : "status ok",
   "password_required":"Use 8 or more characters with a mix of letters numbers and symbols",
   "QR.ERROR_TITLE": "QR is not generated",
-  "QR.ERROR_TEXT": "Your membership is expired, Do you want to activate it?",
+  "QR.ERROR_TEXT": "Your membership is inactive, Do you want to activate it?",
   "SUBSCRIPTION_ACTIVE": "Active subscription",
   "SUBSCRIPTION_DEACTIVE": "Inactive subscription",
+  "ACCESS_QR":"Show this code to access the gym",
   "user": "I use a gym",
   "admin": "I have a gym",
   "radio": "Who are you:",
@@ -99,7 +100,7 @@
   "payment": "Quota",
   "MEMBERSHIP_WHEGYM": "Membership WheGym",
   "INFO_PAYMENT0":"At",
-  "INFO_PAYMENT1":" ,we understand that each person has different needs and goals,",
+  "INFO_PAYMENT1":" , we understand that each person has different needs and goals,",
   "INFO_PAYMENT2":" so we offer three exciting membership types to suit your lifestyle and goals. ",
   "INFO_PAYMENT3":" Find out which one is perfect for you!",
   "INFO_PAYMENT4": "We believe diversity is the key, so you can choose the quota that best suits you and start achieving your goals today!",
@@ -121,7 +122,7 @@
   "holder": "Card name",
   "PAYMENT": "Payment",
   "INFO_CANCEL0": "By clicking this button, you will confirm the cancellation of your WheGym subscription.",
-  "INFO_CANCEL1": "Please note that when you cancel, you will lose the benefits associated with your current subscription. Your account will remain free with limited features.",
+  "INFO_CANCEL1": "Please note that when you cancel, you will not be able to access our partner gyms. Your user profile will remain valid to re-subscribe at any time.",
   "INFO_CANCEL2": "If you are sure of your decision, please click the button below.",
   "CANCEL_TITLE": "Unsubscribe"
 }
