--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -61,13 +61,14 @@
   "DELETE": "Borrar",
   "GENERATE_QR": "Generar QR",
   "QR_CODE": "Código QR",
-  "active": "Autorenovación",
+  "active": "Autorrenovación",
   "status" : "status ok",
   "password_required": "Usa 8 o más caracteres con una mezcla de números, letras y símbolos",
   "QR.ERROR_TITLE": "QR no generado",
-  "QR.ERROR_TEXT": "Tienes la suscripción caducada, ¿quieres activarla?",
+  "QR.ERROR_TEXT": "Tienes la suscripción inactiva, ¿quieres activarla?",
   "SUBSCRIPTION_ACTIVE": "Suscripción activa",
   "SUBSCRIPTION_DEACTIVE": "Suscripción inactiva",
+  "ACCESS_QR":"Enseña este código para acceder al gimnasio",
   "user": "Voy a un gimnasio",
   "admin": "Tengo un gimnasio",
   "radio": "Quién eres:",
@@ -99,7 +100,7 @@
   "payment": "Cuota",
   "MEMBERSHIP_WHEGYM": "Suscripción WheGym",
   "INFO_PAYMENT0":"En",
-  "INFO_PAYMENT1":" ,entendemos que cada persona tiene necesidades y metas diferentes,",
+  "INFO_PAYMENT1":" , entendemos que cada persona tiene necesidades y metas diferentes,",
   "INFO_PAYMENT2":" por lo que ofrecemos tres interesantes tipos de suscripción que se adaptan a tu estilo de vida y objetivos. ",
   "INFO_PAYMENT3":" ¡Descubre cuál es perfecto para ti!",
   "INFO_PAYMENT4": "Creemos que la diversidad es clave, ¡así que elige la cuota que mejor se adapte a ti y comienza a alcanzar tus objetivos hoy mismo!",
@@ -121,8 +122,8 @@
   "holder": "Titular de la tarjeta",
   "PAYMENT": "Pago",
   "INFO_CANCEL0": "Al hacer clic en este botón, confirmarás la cancelación de tu suscripción a WheGym.",
-  "INFO_CANCEL1": " Ten en cuenta que al cancelar, perderás los beneficios asociados con tu suscripción actual. Tu cuenta seguirá siendo gratuita con funciones limitadas.",
-  "INFO_CANCEL2": "Si estás seguro de tu decisión, por favor, haz clic en el botón a continuación.",
+  "INFO_CANCEL1": " Ten en cuenta que al cancelar, no podrás acceder a nuestros gimnasios asociados. Tu perfil de usuario seguirá vigente para volver a suscribirte cuando quieras.",
+  "INFO_CANCEL2": "Si quieres seguir adelante, por favor, haz clic en el botón a continuación.",
   "CANCEL_TITLE": "Darse de baja",
   "INFO_PAYMENT0_ADMIN": "Amplía tu Alcance con",
   "INFO_PAYMENT1_ADMIN": "la plataforma líder para conectar gimnasios con entusiastas del fitness en todo el mundo",
@@ -134,4 +135,5 @@
   "INFO_ADMIN_TITLE2": "Comunicación Directa: ",
   "INFO_ADMIN2": "Mantente en contacto directo con tus miembros a través de la plataforma. Anuncia eventos, promociones especiales y comparte actualizaciones importantes en tiempo real.",
   "INFO_PAYMENT4_ADMIN": "¡Únete a WheGym hoy y lleva la experiencia de fitness de tu gimnasio al siguiente nivel!"
+  
 }
