--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -134,6 +134,7 @@
   "INFO_ADMIN1": "Administra tus clases, horarios y membresías de manera fácil y eficiente desde la comodidad de tu dispositivo. ¡Más tiempo para centrarte en lo que amas, el fitness!",
   "INFO_ADMIN_TITLE2": "Comunicación Directa: ",
   "INFO_ADMIN2": "Mantente en contacto directo con tus miembros a través de la plataforma. Anuncia eventos, promociones especiales y comparte actualizaciones importantes en tiempo real.",
-  "INFO_PAYMENT4_ADMIN": "¡Únete a WheGym hoy y lleva la experiencia de fitness de tu gimnasio al siguiente nivel!"
-  
+  "INFO_PAYMENT4_ADMIN": "¡Únete a WheGym hoy y lleva la experiencia de fitness de tu gimnasio al siguiente nivel!",
+  "SUBSCRIBE_SUCCESS_TITLE": "¡Te has suscrito con éxito!",
+  "SUBSCRIBE_SUCCESS_TXT": "Gracias por confiar en WheGym"
 }
