--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -125,6 +125,16 @@
   "INFO_CANCEL1": "Please note that when you cancel, you will not be able to access our partner gyms. Your user profile will remain valid to re-subscribe at any time.",
   "INFO_CANCEL2": "If you are sure of your decision, please click the button below.",
   "CANCEL_TITLE": "Unsubscribe",
+  "INFO_PAYMENT0_ADMIN": "Extend your reach with",
+  "INFO_PAYMENT1_ADMIN": "the leading platform for connecting gyms with fitness enthusiasts around the world",
+  "INFO_PAYMENT2_ADMIN": "Why join WheGym?",
+  "INFO_ADMIN_TITLE0": "Global Visibility: ",
+  "INFO_ADMIN0": "Turn your gym into a global attraction by showcasing it on WheGym. Reach a wider audience and attract new members.",
+  "INFO_ADMIN_TITLE1": "Simplified Management: ",
+  "INFO_ADMIN1": "Manage your classes, schedules and memberships easily and efficiently from the convenience of your device - more time to focus on what you love, fitness!",
+  "INFO_ADMIN_TITLE2": "Direct Communication: ",
+  "INFO_ADMIN2": "Stay in direct contact with your members through the platform. Announce events, special promotions and share important updates in real time..",
+  "INFO_PAYMENT4_ADMIN": "Join WheGym today and take your gym fitness experience to the next level!",
   "SUBSCRIBE_SUCCESS_TITLE": "You have successfully subscribed!",
   "SUBSCRIBE_SUCCESS_TXT": "Thanks for trusting WheGym"
 }
