calendar icon changed in grid

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -123,7 +123,7 @@
   "PAYMENT": "Payment",
   "INFO_CANCEL0": "By clicking this button, you will confirm the cancellation of your WheGym subscription.",
   "INFO_CANCEL1": "Please note that when you cancel, you will not be able to access our partner gyms. Your user profile will remain valid to re-subscribe at any time.",
-  "INFO_CANCEL2": "If you are sure of your decision, please click the button below.",
+  "INFO_CANCEL2": "If you are sure of your decision, please click the basket below.",
   "CANCEL_TITLE": "Unsubscribe",
   "INFO_PAYMENT0_ADMIN": "Extend your reach with",
   "INFO_PAYMENT1_ADMIN": "the leading platform for connecting gyms with fitness enthusiasts around the world",
