--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -123,7 +123,7 @@
   "PAYMENT": "Pago",
   "INFO_CANCEL0": "Al hacer clic en este botón, confirmarás la cancelación de tu suscripción a WheGym.",
   "INFO_CANCEL1": " Ten en cuenta que al cancelar, no podrás acceder a nuestros gimnasios asociados. Tu perfil de usuario seguirá vigente para volver a suscribirte cuando quieras.",
-  "INFO_CANCEL2": "Si quieres seguir adelante, por favor, haz clic en el botón a continuación.",
+  "INFO_CANCEL2": "Si quieres seguir adelante, por favor, haz clic en la papelera a continuación.",
   "CANCEL_TITLE": "Darse de baja",
   "INFO_PAYMENT0_ADMIN": "Amplía tu Alcance con",
   "INFO_PAYMENT1_ADMIN": "la plataforma líder para conectar gimnasios con entusiastas del fitness en todo el mundo",
